[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/menus/LoginMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/shaders/noise.gdshader" type="Shader" id=2]
[ext_resource path="res://resources/shaders/blur.tres" type="Shader" id=3]
[ext_resource path="res://resources/themes/login_label.tres" type="Theme" id=4]
[ext_resource path="res://resources/themes/login_title.tres" type="Theme" id=5]
[ext_resource path="res://resources/shaders/outline.tres" type="Shader" id=6]
[ext_resource path="res://assets/textures/symbol.png" type="Texture" id=7]
[ext_resource path="res://scenes/menus/SceneTransition.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/fonts/Poppins-MediumItalic.ttf" type="DynamicFontData" id=9]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/color = Color( 1, 0.701961, 0, 1 )
shader_param/bg_color = Color( 0.592157, 0, 0, 1 )
shader_param/mix_amount = 0.5
shader_param/OCTAVES = 3
shader_param/LAYERS = 10.0
shader_param/SPEED = 0.025
shader_param/ZOOM = 2.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/blur_amount = 2.5

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 6 )
shader_param/width = 12.0
shader_param/outline_color = null

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 9 )

[node name="LoginMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.431373, 0, 1, 1 )

[node name="Noise" type="ColorRect" parent="Background"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StripNoise" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -720.0
margin_right = 425.0
margin_bottom = 720.0

[node name="Strip" type="ColorRect" parent="StripNoise"]
self_modulate = Color( 0, 0, 0, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="StripNoise"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="MarginContainer2" type="MarginContainer" parent="StripNoise/VBoxContainer"]
margin_right = 850.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="CenterContainer" type="CenterContainer" parent="StripNoise/VBoxContainer"]
margin_top = 54.0
margin_right = 850.0
margin_bottom = 404.0

[node name="TextureRect" type="TextureRect" parent="StripNoise/VBoxContainer/CenterContainer"]
material = SubResource( 4 )
margin_left = 250.0
margin_right = 600.0
margin_bottom = 350.0
rect_min_size = Vector2( 350, 350 )
texture = ExtResource( 7 )
expand = true

[node name="Title" type="Label" parent="StripNoise/VBoxContainer"]
margin_top = 408.0
margin_right = 850.0
margin_bottom = 528.0
theme = ExtResource( 5 )
text = "COPYFIGHT"
align = 1

[node name="LabelUsername" type="Label" parent="StripNoise/VBoxContainer"]
margin_top = 532.0
margin_right = 850.0
margin_bottom = 603.0
text = "Username"
align = 1

[node name="Username" type="LineEdit" parent="StripNoise/VBoxContainer"]
margin_top = 607.0
margin_right = 850.0
margin_bottom = 688.0
context_menu_enabled = false

[node name="LabelPassword" type="Label" parent="StripNoise/VBoxContainer"]
margin_top = 692.0
margin_right = 850.0
margin_bottom = 763.0
text = "Password"
align = 1

[node name="Password" type="LineEdit" parent="StripNoise/VBoxContainer"]
margin_top = 767.0
margin_right = 850.0
margin_bottom = 848.0
secret = true
context_menu_enabled = false

[node name="Create" type="Button" parent="StripNoise/VBoxContainer"]
margin_top = 852.0
margin_right = 850.0
margin_bottom = 923.0
text = "Create"

[node name="Login" type="Button" parent="StripNoise/VBoxContainer"]
margin_top = 927.0
margin_right = 850.0
margin_bottom = 998.0
text = "Login"

[node name="HBoxContainer" type="HBoxContainer" parent="StripNoise/VBoxContainer"]
margin_top = 1002.0
margin_right = 850.0
margin_bottom = 1073.0
alignment = 1

[node name="Saveinfo" type="CheckBox" parent="StripNoise/VBoxContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 681.0
margin_bottom = 71.0
theme = ExtResource( 4 )
text = "  Cache User Login  "
flat = true

[node name="MarginContainer" type="MarginContainer" parent="StripNoise/VBoxContainer"]
margin_top = 1077.0
margin_right = 850.0
margin_bottom = 1177.0
rect_min_size = Vector2( 0, 100 )

[node name="Offline" type="Button" parent="StripNoise/VBoxContainer"]
margin_top = 1181.0
margin_right = 850.0
margin_bottom = 1252.0
custom_fonts/font = SubResource( 5 )
text = "OFFLINE MODE"

[node name="SceneTransition" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="pressed" from="StripNoise/VBoxContainer/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="StripNoise/VBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="StripNoise/VBoxContainer/HBoxContainer/Saveinfo" to="." method="_on_Saveinfo_pressed"]
[connection signal="pressed" from="StripNoise/VBoxContainer/Offline" to="." method="_on_Offline_pressed"]
